# Social-copilot

./: .gitignore  README.md  main.py  pyproject.toml  rebuild.sh
brain/: __init__.py
brain/api_hub/: __init__.py  config.py  router.py
brain/api_hub/adapters/: __init__.py  deepseek_adapter.py  doubao_adapter.py  openai_adapter.py
brain/rag/: __init__.py  retriever.py
brain/rag/knowledge_base/: README.md
brain/scenario/: __init__.py  detector.py
brain/scenario/prompt_templates/: business.md  intimate.md
config/: app_config.yaml  models.yaml  scenarios.yaml
core/: __init__.py
core/identity/: __init__.py  contact_classifier.py  relationship_model.py
core/reflection/: diff_tracker.py  skill_updater.py
core/skill_distiller/: __init__.py  encryptor.py  skill_builder.py
core/tone/: __init__.py  tone_filter.py
distiller/: feature_extractor.py  parser.py
distiller/persona/: __init__.py  persona_manager.py
distiller/reflection/: __init__.py
docs/: api_integration_guide.md  architecture.md  skill_format.md
hook/: __init__.py  tab_handler.py
hook/macos/: vision_ocr_probe.py
hook/overlay/: ghost_text.py
hook/overlay/settings/: __init__.py  api_config_panel.py
hook/windows/: __init__.py
probe/: base_probe.py
probe/macos/: __init__.py  accessibility_probe.py
probe/windows/: uiautomation_probe.py
tests/: __init__.py  test_api_hub.py  test_identity_mapping.py  test_probe.py  test_skill_distiller.py''
ui/: __init__.py
ui/settings/: tone_selector.py
ui/sidebar/: __init__.py  main_panel.py
