[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "social-copilot"
version = "0.1.0"
description = "微信社交副驾 — 非侵入式侧边栏 AI 补全工具（底座与模型分离架构）"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["wechat", "ai", "copilot", "ghost-text", "byok", "rag"]

[project.optional-dependencies]
# 本地灵魂蒸馏 & 数据处理
distiller = [
    "jieba",           # 中文分词
    "cryptography",    # myself.skill 本地加密
    "pydantic>=2.0",   # 数据模型校验
]

# 外部 AI 接入层（BYOK）
brain = [
    "openai>=1.0",     # 兼容 OpenAI 协议的统一客户端
    "httpx",           # 异步 HTTP
    "tiktoken",        # Token 计数（用于控制 Prompt 长度）
]

# RAG 知识库
rag = [
    "chromadb",        # 本地向量数据库
    "sentence-transformers",  # 本地 Embedding
]

# macOS 探针
probe-macos = [
    "pyobjc-framework-Cocoa",        # Accessibility API
    "pyobjc-framework-Vision",       # Vision Framework OCR
]

# Windows 探针
probe-windows = [
    "uiautomation",    # UIAutomation 控件树遍历
    "Pillow",          # 截图备选方案
]

# UI 侧边栏
ui = [
    "PyQt6",           # 极客风格分栏 GUI
]

# 开发 & 测试
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "ruff",            # Linter
    "mypy",            # 类型检查
]

# 一键安装全部（开发用）
all = [
    "social-copilot[distiller,brain,rag,ui,dev]",
]

[project.scripts]
social-copilot = "social_copilot.main:main"

[tool.hatch.build.targets.wheel]
packages = ["core", "brain", "probe", "ui"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
